# digital-wallet

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Purplme-task.postman_collection.json  README.md  conftest.py  db.json  deploy.sh  pyproject.toml  pytest.ini  requirements.txt
authentication/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_initial.py
authentication/tests/: test_actions.py
core/: routers.py  settings.py  test_settings.py  urls.py
core/auth/: authentication.py  permissions.py
core/base/: serializers.py  views.py
core/config/: configuration_manager.py
core/middlewares/: TimezoneMiddleware.py  authenticated_swagger.py
deployments/: docker-compose.local.yml  docker-compose.production.yml  docker-compose.staging.yml
deployments/nginx/: nginx.local.conf  nginx.production.conf  nginx.staging.conf
utilities/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
utilities/migrations/: 0001_initial.py
utils/: cloud.py  common_tasks.py  custom_paginator.py  data_generators.py  orm_utils.py  pathes_generator.py  validators.py
wallets/: admin.py  events.py  filters.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
wallets/migrations/: 0001_initial.py  0002_tier_number_of_wallets.py  0003_alter_tier_number_of_wallets.py  0004_remove_tier_limits.py
wallets/tests/: test_actions.py
